# csp-satellites

./: CMakeLists.txt  README.md
src/: Plugin.cpp  Plugin.hpp  Satellite.cpp  Satellite.hpp  logger.cpp  logger.hpp
